<resources>
    <string name="app_name">ACME BE</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">Acceso con Google</string>
    <string name="login_button_register_text">Registrar</string>
    <string name="login_mail_error_1">El correo electrónico no puede estar vacio</string>
    <string name="login_pass_error">La contraseña no puede estar vacia</string>
    <string name="login_mail_acces_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Aún no has validado tu cuenta. ¿Quieres que te enviemos un correo de verificación?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_mail_error_sent">Hemos enviado un correo de verificación a tu dirección</string>
    <string name="login_mail_error_no_sent">No se ha podido enviar un correo de verificación</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_play_services_error">Debes actualizar google play services</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">858198745380-e2k6757jbq3t9nf9qvno4vrnom7ijvcc.apps.googleusercontent.com</string>
    <string name="login_completed">Este Usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introducir nuevamente la contraseña</string>
    <string name="login_button_signup_text">Registrar usuario</string>
    <string name="signup_error_user">El correo no es valido</string>
    <string name="signup_error_pass">La contraseña no es valida</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_create_error">Se ha producido un error al registrar el usuario</string>
    <string name="location_rationale">Necesitamos tu permiso para conocer tu ubicación</string>
    <string name="location_rationale_ok">Permitir</string>
    <string name="location_cancel">Este permiso es importante para la aplicación</string>
    <string name="open_weather_map_api_key">a2e1e9f2c90f39b5b5637cc5d28ce5f5</string>
</resources>