<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:id="@+id/loginProgres"
        style="?android:attr/progressBarStyleLarge"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/splash"
        android:contentDescription="@string/app_name"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginMainLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailLoginForm"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginEmail">

                <AutoCompleteTextView
                    android:id="@+id/loginEmailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_et_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="24dp"
                    android:singleLine="true"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginPass">

                <AutoCompleteTextView
                    android:id="@+id/loginPassEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_et_hint"
                    android:textSize="24dp"

                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButtonMail"
                android:backgroundTint="@color/blue_button"
                android:textAllCaps="true"
                android:text="@string/login_button_mail_text"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButtonGoogle"
                android:backgroundTint="@color/common_google_signin_btn_text_dark"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:textAllCaps="true"
                android:text="@string/login_button_google_text"
                android:textColor="@color/common_google_signin_btn_text_light"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButtonRegister"
                android:backgroundTint="@color/blue_button"
                android:textAllCaps="true"
                android:text="@string/login_button_register_text"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>