<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail">

        <AutoCompleteTextView
            android:id="@+id/loginEmailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_et_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="24dp"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPass">

        <AutoCompleteTextView
            android:id="@+id/loginPassEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_et_hint"
            android:textSize="24dp"

            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginPassConfirmation">

        <AutoCompleteTextView
            android:id="@+id/loginPassConfirmationEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass_confirmation_et_hint"
            android:textSize="24dp"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        android:backgroundTint="@color/blue_button"
        android:textAllCaps="true"
        android:text="@string/login_button_signup_text"
        android:textColor="@color/white"/>

</androidx.appcompat.widget.LinearLayoutCompat>